added navbar section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<!-- Navbar -->
+    <nav class="flex py-5 mx-15 items-center justify-between">
+        <div class="navbar-1st flex gap-5">
+            <img class="w-[50px] h-[50px]" src="./assets/logo.png" alt="">
+            <h2 class="text-[#006747] font-bold">Emergency <br>Service</h2>
+        </div>
+        <div class="navbar-2nd flex gap-9 items-center text-center">
+            <div class="justify-center flex gap-3 bg-[#41ff6b1a] rounded-3xl p-3 w-[127px]">
+                <p id="available-heart" class="font-bold">0</p>
+                <img class="w-[30px] h-[30px]" src="./assets/heart.png" alt="">
+            </div>
+            <div class="justify-center flex gap-3 bg-[#41ff6b1a] rounded-3xl p-3 w-[127px]">
+                <p id="coin-btn" class="font-bold">100</p>
+                <img class="w-[30px] h-[30px]" src="./assets/coin.png" alt="">
+            </div>
+            <div>
+                <button class="copy-count bg-green-500 text-[white] rounded-3xl p-3 w-[127px]">0 Copy</button>
+            </div>
+        </div>
+    </nav>
 
+<script src="./index.js"></script>
 </body>
 </html>
