--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         </div>
     </nav>
 
+    <!-- Hero section -->
+    <section
+        class="hero flex gap-3 flex-col items-center py-5 bg-[linear-gradient(to_right,#013223_0%,#006747_50%,#013223_100%)]">
+        <img class="h-[92px] w-[92px]" src="./assets/logo-dark.png" alt="">
+        <h2 class="text-white">জরুরি সেবা ডিরেক্টরি</h2>
+        <p class="text-white">Government Emergency Services at Your Fingertip – A Project by Government of the People’s
+            Republic of Bangladesh</p>
+    </section>
+
 <script src="./index.js"></script>
 </body>
 </html>
