added main section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,198 @@
         <p class="text-white">Government Emergency Services at Your Fingertip – A Project by Government of the People’s
             Republic of Bangladesh</p>
     </section>
+    <!-- Main -->
+    <main class="bg-[#f5fff6]">
+        <section class="main flex gap-[20px] px-[50px] py-[50px]">
+            <!-- Emergency Hotline Section -->
+            <div class="card-section w-[80%] grid grid-cols-3 gap-[30px]">
 
+                <!-- Card 1 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#FFE3E2] p-3 rounded-xl" src="./assets/emergency.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">জাতীয় জরুরি সেবা</p>
+                    <p class="text-gray-500 mb-[20px]">National Emergency</p>
+                    <p class="font-bold mt-[20px] hotline">999</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">সার্বজনীন</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2F3FF] p-3 rounded-xl" src="./assets/police.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">পুলিশ</p>
+                    <p class="text-gray-500 mb-[20px]">Police</p>
+                    <p class="font-bold mt-[20px] hotline">999</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">পুলিশ</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Police" data-number="999"><i class="fa-solid fa-phone"></i> call</button>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#FFF4E2] p-3 rounded-xl" src="./assets/fire-service.png"
+                            alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">ফায়ার সার্ভিস</p>
+                    <p class="text-gray-500 mb-[20px]">Fire Service</p>
+                    <p class="font-bold mt-[20px] hotline">999</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">ফায়ার</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Fire Service" data-number="999"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2FFE9] p-3 rounded-xl" src="./assets/ambulance.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">অ্যাম্বুলেন্স</p>
+                    <p class="text-gray-500 mb-[20px]">Ambulance</p>
+                    <p class="font-bold mt-[20px] hotline">1994-999999</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">স্বাস্থ্য</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Ambulance" data-number="1994-999999"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#F5E2FF] p-3 rounded-xl" src="./assets/emergency.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">নারী ও শিশু সহায়তা</p>
+                    <p class="text-gray-500 mb-[20px]">Women & Child Helpline</p>
+                    <p class="font-bold mt-[20px] hotline">109</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[120px] mb-[20px]">সহায়তা</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Women & Child Help" data-number="109"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+                <!-- Card 6 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2EFFF] p-3 rounded-xl" src="./assets/emergency.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">দুদক</p>
+                    <p class="text-gray-500 mb-[20px]">Anti-Corruption</p>
+                    <p class="font-bold mt-[20px] hotline">106</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">সরকারি</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Anti-Corruption" data-number="106"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+                <!-- Card 7 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2EFFF] p-3 rounded-xl" src="./assets/emergency.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">বিদ্যুৎ বিভ্রাট</p>
+                    <p class="text-gray-500 mb-[20px]">Electricity Outage</p>
+                    <p class="font-bold mt-[20px] hotline">16216</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">বিদ্যুৎ</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Electricity Outage" data-number="16216"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+                <!-- Card 8 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2EFFF] p-3 rounded-xl" src="./assets/brac.png" alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">ব্র্যাক</p>
+                    <p class="text-gray-500 mb-[20px]">Brac</p>
+                    <p class="font-bold mt-[20px] hotline">16445</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">এনজিও</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Brac" data-number="16445"><i class="fa-solid fa-phone"></i> call</button>
+                    </div>
+                </div>
+                <!-- Card 9 -->
+                <div class="item bg-white rounded-xl p-3 w-full">
+                    <div class="flex items-center justify-between">
+                        <img class="h-[72px] w-[72px] bg-[#E2EFFF] p-3 rounded-xl" src="./assets/Bangladesh-Railway.png"
+                            alt="">
+                        <p><i class="add-heart fa-solid fa-heart"></i></p>
+                    </div>
+                    <p class="font-bold mt-[20px]">বাংলাদেশ রেলওয়ে</p>
+                    <p class="text-gray-500 mb-[20px]">Bangladesh Railway</p>
+                    <p class="font-bold mt-[20px] hotline">163</p>
+                    <p class="text-gray-500 bg-slate-200 rounded-xl p-1 w-[100px] mb-[20px]">পরিবহন</p>
+                    <div class="flex gap-1">
+                        <button class="copy-btn border rounded-xl px-5 py-1 bg-white text-[#5c5c5c] w-full"><i
+                                class="fa-solid fa-copy"></i> copy</button>
+                        <button class="call-btn border rounded-xl px-5 py-1 bg-green-600 text-white w-full"
+                            data-service="Bangladesh Railway" data-number="163"><i class="fa-solid fa-phone"></i>
+                            call</button>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- History Section -->
+            <div class="history-section w-[20%]">
+                <div class="item-10 flex flex-col bg-white rounded-xl p-3 w-[270px] px-[10px]">
+                    <div class="flex justify-between items-center mb-2">
+                        <h2 class="font-bold"><i class="fa-solid fa-clock"></i> Call History</h2>
+                        <button id="clear-history"
+                            class="border rounded-xl px-5 py-1 bg-green-600 text-white">Clear</button>
+                    </div>
+                    <div id="history-list"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+<!-- JavaScript file -->
 <script src="./index.js"></script>
 </body>
 </html>
